filters and matplotbase functions added; reject_analysis views rewritten; reject reasons dropdown based on rejected status function; README updated

--- a/templates/pages/welcome.html
+++ b/templates/pages/welcome.html
@@ -12,8 +12,8 @@
     <div class="space"></div>
     <h5><span style="color: #00008b;">Welcome</span>, enjoy your time with the system today.</h5>
     <div class="space"></div>
-    <a class="btn btn-secondary btn-lg" role="button" href="{% url 'admin:login' %}" style="width: 120px">Admin</a>
-
+    <a class="btn btn-secondary btn-lg mr-2" role="button" href="{% url 'admin:login' %}" style="width: 120px">Admin</a>
+    <a class="btn btn-primary btn-lg" role="button" href="{% url 'accounts:sign_in' %}" style="width: 120px">Staff</a>
 </div>
 {% endblock %}
 
