--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -4,17 +4,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Reject Analysis</title>
-
+    <title>{{ app_name }}</title>
       <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.css' %}" />
-
-    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
-<!--     responsive style -->
-    <link href="{% static 'assets/css/responsive.css' %}" rel="stylesheet" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <!-- custom style -->
+    <link  rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}" />
+    <!-- responsive style -->
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/responsive.css' %}"/>
+    <!-- Fontawesome -->
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/all.css' %}" />
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">-->
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <div class="content">
@@ -23,6 +23,9 @@
             {% block content %}{% endblock %}
         </div>
     </div>
+    {% block extra_js %}{% endblock %}
+    <script type="text/javascript" src="{% static 'assets/js/bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'assets/js/all.js' %}"></script>
 </body>
 </html>
 
