--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,6 +4,7 @@
 
 
 {% block extrastyle %}
+    {{ block.super }} 
     <!-- custom style -->
     <link  rel="stylesheet" type="text/css" href="{% static 'assets/css/admin_styles.css' %}" />
 {% endblock %}
