--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,13 @@
 {% extends "layouts/main_base.html" %}
 {% load i18n static %}
 
+{% block extra_css %}
+    <style>
+        .font_sixteen {
+            font-size: 16px;
+        }
+    </style>
+{% endblock %}
 
 
 {% block content %}
@@ -12,12 +19,12 @@
                     <div class="col-12 d-flex align-items-center justify-content-center">
                         <div class="bg-white shadow border-0 rounded p-4 p-lg-5 w-100 fmxw-500">
                             <div class="text-center text-md-center mb-4 mt-md-0">
-                                <h1 class="h3">{% trans 'Logged Out' %}</h1>
-                                <p class="text-gray space">{% trans "Thanks for spending some quality time with the system today." %}</p>
+                                <h2>{% trans 'Logged Out' %}</h2>
+                                <p class="deep-blue-word space font_sixteen">{% trans "Thanks for spending some quality time with the system today." %}</p>
                             </div>
                             <div class="mt-5">
                                 <div class="d-grid mt-3">
-                                    <a href="{% url 'admin:index' %}" class="btn ">{% trans 'Log in again' %}</a>
+                                    <a href="{% url 'admin:index' %}" class="btn btn btn-primary btn-lg">{% trans 'Log in again' %}</a>
                                 </div>
                             </div>
                         </div>
