--- a/templates/admin/patients/patient_detail.html
+++ b/templates/admin/patients/patient_detail.html
@@ -95,22 +95,24 @@
         <div class="h5 section_title">
             Sub Details
         </div>
-        <div class="accordion" id="accordionPanelsStayOpen">
+        <div class="accordion" id="accordionPanelsStayOpen">            
             <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseTwo">
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                        aria-controls="panelsStayOpen-collapseOne">
                         Radiologist / Radiographer Notes
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-headingTwo">
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                    aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <div class="add_doc">
-                            <a href="#"><i class="fas fa-plus"></i>
-                                Add Note
-                            </a>                    
+                            <div class="add_doc">
+                                <a href="#"><i class="fas fa-plus"></i>
+                                    Add Note
+                                </a>                    
+                            </div>
                         </div>
                         <table class="table table-striped table-hover" width="100%">
                             <tr>
@@ -129,6 +131,7 @@
                     </div>
                 </div>
             </div>
+        
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -194,24 +197,25 @@
                         </table>
                     </div>
                 </div>
-            </div>
+            </div>            
             <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                        aria-controls="panelsStayOpen-collapseOne">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseTwo">
                         Imaging Records
                     </button>
                 </h2>
-                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
-                    aria-labelledby="panelsStayOpen-headingOne">
-                    <div class="accordion-body">
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body">                       
                         <div class="add_doc">
                             <a href="#"><i class="fas fa-plus"></i>
-                                Add Imaging Record
-                            </a>
+                                Add Record
+                            </a>                    
                         </div>
-                        <div class="add_doc">📝</div>
+                    </div>
+                    <div class="add_doc">📝</div>
                         <table class="table table-striped table-hover" width="100%">
                             <tr>
                                 <th>#</td>
