--- a/templates/admin/patients/patient_detail.html
+++ b/templates/admin/patients/patient_detail.html
@@ -5,6 +5,7 @@
 {{ block.super }}
 <!-- custom style -->
 <link rel="stylesheet" type="text/css" href="{% static 'assets/css/admin_styles.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'assets/css/accordion.css' %}" />
 {% endblock %}
 
 {% block breadcrumbs %}
@@ -89,13 +90,19 @@
             </table>
         </div>
     </div>
-    <div class="space"></div>
+    <div class="space">
+        <!-- Button to open the modal -->
+
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Launch demo modal
+        </button>
+    </div>
 
     <div class="sub_sections">
         <div class="h5 section_title">
             Sub Details
         </div>
-        <div class="accordion" id="accordionPanelsStayOpen">            
+        <div class="accordion" id="accordionPanelsStayOpen">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -111,7 +118,7 @@
                             <div class="add_doc">
                                 <a href="#"><i class="fas fa-plus"></i>
                                     Add Note
-                                </a>                    
+                                </a>
                             </div>
                         </div>
                         <table class="table table-striped table-hover" width="100%">
@@ -131,7 +138,7 @@
                     </div>
                 </div>
             </div>
-        
+
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -146,7 +153,7 @@
                         <div class="add_doc">
                             <a href="#"><i class="fas fa-plus"></i>
                                 Add Diagnosis
-                            </a>                    
+                            </a>
                         </div>
                         <table class="table table-striped table-hover" width="100%">
                             <tr>
@@ -179,43 +186,8 @@
                         <div class="add_doc">
                             <a href="#"><i class="fas fa-file"></i>
                                 New Request
-                            </a>                    
+                            </a>
                         </div>
-                        <table class="table table-striped table-hover" width="100%">
-                            <tr>
-                                <th>#</td>
-                                <th>Process</td>
-                                <th>Personnel Involved</td>
-                            </tr>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Imgaging</td>
-                                    <td>Mr. Akutse</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>            
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseTwo">
-                        Imaging Records
-                    </button>
-                </h2>
-                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-                    aria-labelledby="panelsStayOpen-headingTwo">
-                    <div class="accordion-body">                       
-                        <div class="add_doc">
-                            <a href="#"><i class="fas fa-plus"></i>
-                                Add Record
-                            </a>                    
-                        </div>
-                    </div>
-                    <div class="add_doc">📝</div>
                         <table class="table table-striped table-hover" width="100%">
                             <tr>
                                 <th>#</td>
@@ -233,17 +205,69 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                        aria-controls="panelsStayOpen-collapseTwo">
+                        Imaging Records
+                    </button>
+                </h2>
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                    aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body">
+                        <div class="add_doc">
+                            <a href="#"><i class="fas fa-plus"></i>
+                                Add Record
+                            </a>
+                        </div>
+                    </div>
+                    <div class="add_doc">📝</div>
+                    <table class="table table-striped table-hover" width="100%">
+                        <tr>
+                            <th>#</td>
+                            <th>Process</td>
+                            <th>Personnel Involved</td>
+                        </tr>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Imgaging</td>
+                                <td>Mr. Akutse</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
 
-
 <!-- Your custom content here -->
 {% endblock %}
 
-{% block extrahead %}
-{{ block.super }}
-<script type="text/javascript" src="{% static 'assets/js/admin_js.js' %}"></script>
-<script type="text/javascript" src="{% static 'assets/js/bootstrap.js' %}"></script>
+{% block extrajs %}
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                The stubborn Modal
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
